Perf/websocket (#45)
* perf(websocket): Optimize for 2gb RAM cloud

* remove gbc in JVM